--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
       "figlet": "1.2.0",
       "snekfetch": "4.0.0",
       "fs-extra": "6.0.1",
-      "google-translate-api": "2.3.0"
+      "google-translate-api": "2.3.0",
       "google-it": "1.0.4"
     }
   }
